repair the static resources

--- a/mishazi/templates/template_article_add.html
+++ b/mishazi/templates/template_article_add.html
@@ -43,11 +43,10 @@
 
 
 {%endblock%}
-{%load staticfiles%}
 
 {%block footer%}
 
-<script src="{%static "js/bootstrap-wysiwyg.js"%}">
+<script src="/static/js/bootstrap-wysiwyg.js">
  $(function(){
     
     $('#editor').wysiwyg();
