--- a/mishazi/templates/base.html
+++ b/mishazi/templates/base.html
@@ -1,4 +1,3 @@
-{%load staticfiles%}
 <!DOCTYPE html>
 <html lang="zh-cn">
   <head>
@@ -6,7 +5,7 @@
     <mata charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="{%static "css/bootstrap.css"%}">
+    <link rel="stylesheet" href="/static/css/bootstrap.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -22,9 +21,9 @@
     	{%endblock%}
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="{%static "js/jquery.min.js"%}"></script>
+    <script src="/static/js/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{%static "js/bootstrap.min.js"%}"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
 
     	{%block footer%}
     	{%endblock%}
